--- a/css/main.css
+++ b/css/main.css
@@ -444,6 +444,14 @@ body {
   color: #000000;
 }
 
+.country__content-btn2 {
+  display: none;
+}
+
+.country__content-btn3 {
+  display: none;
+}
+
 .country__content-right {
   margin-right: 125px;
   display: grid;
@@ -501,10 +509,15 @@ body {
 .country__content-box--last:hover {
   background-color: #07AF91;
 }
-.country__content-box--last img {
+
+.country-arrow-1 {
   display: block;
   margin: 0 auto;
   padding: 45px 0 25px;
+}
+
+.country-arrow-2 {
+  display: none;
 }
 
 .accelerator-it__inner {
@@ -527,14 +540,15 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 20px;
+  gap: 0 20px;
 }
 
 .accelerator-it__item-box {
   -webkit-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.09);
           box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.09);
   border-radius: 10px;
-  min-width: 392px;
-  min-height: 284px;
+  width: 392px;
+  height: 284px;
   text-align: center;
   font-weight: 500;
   font-size: 20px;
@@ -600,6 +614,7 @@ body {
 }
 
 .programm__accordion-title {
+  position: relative;
   padding: 10px 0;
   font-weight: 500;
   font-size: 20px;
@@ -609,12 +624,12 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .programm__accordion-title span {
-  margin-right: 11px;
+  width: 130px;
   font-weight: 700;
   font-size: 20px;
   line-height: 300%;
@@ -622,6 +637,19 @@ body {
 }
 .programm__accordion-title:last-child {
   cursor: auto;
+}
+
+.prog__acc-box {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .programm__accordion-ellipse {
@@ -632,9 +660,9 @@ body {
   width: 39px;
   background-color: #2A79C2;
   border-radius: 50%;
-  position: relative;
-  top: 10px;
-  left: -15px;
+  position: absolute;
+  top: 20px;
+  right: 50px;
 }
 .programm__accordion-ellipse span {
   width: 12px;
@@ -680,8 +708,8 @@ body {
   background-color: #2A79C2;
   border-radius: 50%;
   position: relative;
-  top: 10px;
-  left: -15px;
+  top: 0;
+  right: 25px;
 }
 .programm__accordion-title--active .programm__accordion-ellipse span {
   width: 12px;
@@ -717,6 +745,16 @@ body {
 }
 .programm__accordion-text p:last-child {
   color: #2A79C2;
+}
+
+.programm__accordion-text--btn2 {
+  display: block;
+  line-height: 70px;
+  vertical-align: middle;
+}
+
+.programm__accordion-text--btn1 {
+  display: none;
 }
 
 .blue-icons {
@@ -804,7 +842,6 @@ body {
 }
 
 .result__content {
-  width: 390px;
   height: 280px;
   margin-bottom: 20px;
   margin-right: 20px;
@@ -1568,6 +1605,154 @@ div#choices--country-we-item-choice-1 {
     line-height: 30px;
     margin: 20px auto 20px;
   }
+
+  .country__menu {
+    margin-bottom: 45px;
+  }
+
+  .country__list-item {
+    font-size: 14px;
+    line-height: 16px;
+    height: 60px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 40px;
+  }
+
+  .country__content-title {
+    font-size: 24px;
+    line-height: 34px;
+    margin-bottom: 17px;
+  }
+
+  .country__content-btn1 {
+    display: none;
+  }
+
+  .country__content-btn2 {
+    display: inline-block;
+    padding: 0 46px;
+  }
+
+  .country__content-user-box {
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  .country__content-right {
+    margin-right: 0;
+    max-height: 280px;
+  }
+
+  .country__content-box {
+    max-width: 193px;
+    max-height: 133px;
+    font-size: 14px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .country__content-box p {
+    font-size: 36px;
+    padding-top: 0;
+    padding-bottom: 15px;
+  }
+  .country__content-box p span {
+    font-size: 20px;
+  }
+
+  .country-arrow-1 {
+    display: none;
+  }
+
+  .country-arrow-2 {
+    display: block;
+    margin: 0 auto;
+    padding: 26px 0 15px;
+  }
+
+  .country__content-box--last {
+    padding: 0 38px 27px 38px;
+  }
+
+  .country__item {
+    margin-top: 20px;
+  }
+
+  .result__content {
+    font-size: 14px;
+    padding: 44px 10px 0;
+  }
+  .result__content span {
+    font-size: 64px;
+  }
+  .result__content p {
+    font-size: 14px;
+  }
+
+  .price__item {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 20px 20px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+
+  .price__content {
+    max-width: 342px;
+  }
+
+  .price__icon {
+    height: 181px;
+  }
+  .price__icon p {
+    font-size: 18px;
+  }
+  .price__icon img {
+    -webkit-transform: scale(0.9);
+            transform: scale(0.9);
+  }
+
+  .price__list {
+    margin-bottom: -35px;
+  }
+  .price__list p {
+    font-size: 16px;
+  }
+  .price__list ol {
+    font-size: 14px;
+  }
+
+  .price__text-item {
+    font-size: 14px;
+  }
+  .price__text-item span {
+    font-size: 16px;
+  }
+
+  .price__text-blue {
+    font-size: 16px;
+  }
+
+  .price__btn {
+    line-height: 70px;
+    margin: 0 32px;
+  }
 }
 @media (max-width: 1000px) {
   .header__top-inner {
@@ -1582,7 +1767,7 @@ div#choices--country-we-item-choice-1 {
     width: 124px;
   }
 
-  .button-green {
+  .service__btn {
     padding: 15px 28px;
     border-radius: 5px;
   }
@@ -1624,6 +1809,326 @@ div#choices--country-we-item-choice-1 {
 
   .button-blue {
     font-size: 18px;
+  }
+
+  .accelerator-it__text {
+    text-align: center;
+    font-size: 16px;
+    margin-top: 0;
+  }
+
+  .accelerator-it__item-box {
+    font-size: 16px;
+    line-height: 19px;
+  }
+
+  .accelerator-it__video {
+    min-height: 345px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .accelerator-it__video-text {
+    font-size: 18px;
+    line-height: 28px;
+    padding-top: 0;
+    max-width: 221px;
+  }
+
+  .accelerator-it__video-img {
+    width: 89px;
+    height: 89px;
+    margin-top: 20px;
+  }
+  .accelerator-it__video-img img {
+    height: 60px;
+  }
+
+  .accelerator-it__item-text {
+    max-width: 140px;
+    margin: 0 auto;
+  }
+
+  .accelerator-it__item-text--last {
+    margin-top: 40px;
+  }
+
+  .programm__accordion-title {
+    font-size: 16px;
+  }
+  .programm__accordion-title p {
+    text-align: center;
+  }
+  .programm__accordion-title span {
+    font-size: 16px;
+  }
+
+  .prog__acc-box p {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    line-height: 20px;
+    margin-right: 90px;
+  }
+
+  .programm__accordion-text {
+    font-size: 14px;
+    line-height: 25px;
+  }
+  .programm__accordion-text p {
+    height: 70px;
+    padding-right: 50px;
+  }
+
+  .programm__accordion-ellipse {
+    height: 30px;
+    width: 30px;
+    right: 30px;
+  }
+  .programm__accordion-ellipse span {
+    height: 3px;
+    top: 15px;
+    left: 6px;
+  }
+  .programm__accordion-ellipse span:last-child {
+    left: 13px;
+  }
+
+  .programm__accordion-title--active .programm__accordion-ellipse {
+    height: 30px;
+    width: 30px;
+    right: 30px;
+  }
+  .programm__accordion-title--active .programm__accordion-ellipse span {
+    height: 3px;
+    top: 15px;
+    left: 6px;
+  }
+  .programm__accordion-title--active .programm__accordion-ellipse span:last-child {
+    left: 13px;
+  }
+
+  .programm-btn {
+    display: none;
+  }
+
+  .blue-icons__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 117px 0;
+  }
+
+  .blue-icons__content {
+    margin-bottom: 50px;
+    text-align: center;
+  }
+
+  .blue-icons {
+    height: 1010px;
+  }
+
+  .blue-icons__title {
+    margin: 0 0 30px 0;
+    font-size: 32px;
+  }
+
+  .blue-icons__text {
+    margin-bottom: 30px;
+  }
+
+  .blue-icons__item {
+    margin: 0;
+  }
+}
+@media (max-width: 900px) {
+  .prog__acc-box p {
+    max-width: 400px;
+    padding-right: 0;
+  }
+}
+@media (max-width: 750px) {
+  .programm__accordion-text {
+    font-size: 12px;
+  }
+  .programm__accordion-text p {
+    padding: 0;
+    text-align: center;
+  }
+
+  .programm__accordion-text--btn1 {
+    display: none;
+  }
+
+  .programm__accordion-text--btn2 {
+    display: block;
+  }
+
+  .programm__accordion-title {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 17px 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .programm__accordion-title span {
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+  }
+
+  .prog__acc-box {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .prog__acc-box p {
+    font-size: 12px;
+    line-height: 20px;
+    max-width: 240px;
+    margin: 0;
+  }
+
+  .programm__accordion-ellipse {
+    top: 80px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+
+  .programm__accordion-title--active .programm__accordion-ellipse {
+    height: 30px;
+    width: 30px;
+    left: -40%;
+    top: 40px;
+  }
+  .programm__accordion-title--active .programm__accordion-ellipse span {
+    height: 3px;
+    top: 15px;
+    left: 6px;
+  }
+  .programm__accordion-title--active .programm__accordion-ellipse span:last-child {
+    left: 13px;
+  }
+
+  .prog__acc-box--5 {
+    max-width: 163px;
+    text-align: center;
+  }
+
+  .programm__accordion-title--active .programm__accordion-ellipse--5 {
+    width: 50px;
+  }
+
+  .result__item {
+    grid-template: none;
+  }
+
+  .result__inner {
+    margin-top: 0;
+  }
+
+  .result__content {
+    margin-bottom: 10px;
+    margin-right: 0;
+    height: 204px;
+  }
+  .result__content:nth-child(4) {
+    margin-bottom: 10px;
+  }
+  .result__content:nth-child(5) {
+    margin-bottom: 10px;
+  }
+
+  .result__content {
+    padding: 40px 43px 0;
+    font-size: 12px;
+  }
+  .result__content span {
+    font-size: 48px;
+  }
+  .result__content p {
+    font-size: 14px;
+    margin: 20px 0 5px;
+  }
+
+  .price__item {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .price__content {
+    max-width: 320px;
+  }
+
+  .price__icon {
+    height: 120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 30px;
+  }
+  .price__icon p {
+    font-size: 16px;
+    text-align: left;
+    margin-left: 14px;
+  }
+  .price__icon img {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+
+  .price__list {
+    margin-bottom: -70px;
+  }
+  .price__list p {
+    font-size: 14px;
+  }
+  .price__list ol {
+    font-size: 12px;
+  }
+
+  .price__text-item {
+    font-size: 12px;
+  }
+  .price__text-item span {
+    font-size: 14px;
+  }
+
+  .price__text-blue {
+    font-size: 14px;
+  }
+
+  .price__btn {
+    font-size: 16px;
+    line-height: 55px;
+    margin: 0 32px;
+    border-radius: 5px;
   }
 }
 @media (max-width: 730px) {
@@ -1732,6 +2237,156 @@ div#choices--country-we-item-choice-1 {
   .header__body-btn {
     padding: 0 48px;
   }
+
+  .country__menu {
+    margin-bottom: 20px;
+  }
+
+  .country__item {
+    margin-top: 22px;
+  }
+
+  .country__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .country__content-btn2 {
+    display: none;
+  }
+
+  .country__content-btn3 {
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    line-height: 55px;
+    border-radius: 5px;
+    max-width: 320px;
+  }
+
+  .country__content-left {
+    margin-bottom: 15px;
+  }
+
+  .country__content-right {
+    max-width: 340px;
+    margin-bottom: 12px;
+  }
+
+  .country__content-title {
+    font-size: 18px;
+  }
+
+  .country__content-tex {
+    font-size: 14px;
+  }
+
+  .country__content-user-text {
+    font-size: 10px;
+    line-height: 15px;
+  }
+  .country__content-user-text span {
+    font-size: 12px;
+  }
+
+  .country__content-user-img img {
+    height: 40px;
+    width: 40px;
+  }
+
+  .country__content-user-box {
+    margin-top: 36px;
+    margin-bottom: 0;
+  }
+
+  .country__content-box {
+    max-width: 150px;
+    max-height: 134px;
+    font-size: 12px;
+    padding: 0 30px;
+  }
+  .country__content-box p {
+    font-size: 24px;
+    padding-bottom: 10px;
+  }
+  .country__content-box p span {
+    display: block;
+    font-size: 16px;
+    padding-top: 10px;
+  }
+
+  .country__content-box--last {
+    padding: 0 25px 35px 25px;
+  }
+
+  .accelerator-it__text {
+    margin-top: 10px;
+    font-size: 14px;
+    line-height: 19px;
+  }
+
+  .accelerator-it__item {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px 0;
+  }
+
+  .accelerator-it__item-box {
+    width: 100%;
+    height: 143px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    padding-left: 30px;
+  }
+
+  .accelerator-it__item-img {
+    margin: 0;
+    padding: 0;
+    width: 52px;
+    margin-right: 20px;
+  }
+
+  .accelerator-it__item-text {
+    margin: 0;
+    max-width: 100%;
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .accelerator-it__item-text--last {
+    margin: 0;
+  }
+
+  .accelerator-it__video {
+    min-height: 200px;
+  }
+
+  .accelerator-it__video-text {
+    font-size: 16px;
+  }
+
+  .accelerator-it__video-img {
+    height: 63px;
+    width: 63px;
+  }
+  .accelerator-it__video-img img {
+    height: 46px;
+  }
+
+  .programm__accordion-text--1 {
+    display: none;
+  }
 }
 @media (max-width: 700px) {
   .header__body-inner {
@@ -1811,6 +2466,7 @@ div#choices--country-we-item-choice-1 {
 
   .main__title {
     font-size: 24px;
+    line-height: 35px;
   }
 
   .service__title {
@@ -1835,5 +2491,76 @@ div#choices--country-we-item-choice-1 {
   }
   .ho-we__content p {
     font-size: 14px;
+  }
+
+  .country__list-item {
+    font-size: 10px;
+    padding: 0;
+    -ms-flex-preferred-size: 180px;
+        flex-basis: 180px;
+    text-align: center;
+  }
+
+  .blue-icons__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 100px 0;
+  }
+
+  .blue-icons__content {
+    margin-bottom: 50px;
+    text-align: center;
+  }
+
+  .blue-icons {
+    height: 750px;
+  }
+
+  .blue-icons__title {
+    margin: 0 0 27px 0;
+    font-size: 24px;
+    line-height: 40px;
+    max-width: 324px;
+  }
+
+  .blue-icons__text {
+    font-size: 14px;
+    margin-bottom: 33px;
+  }
+
+  .blue-icons-btn {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    padding: 0 47px;
+    line-height: 55px;
+  }
+
+  .blue-icons__brands {
+    margin: 0 11px 11px 0;
+    height: 66px;
+    line-height: 66px;
+    width: 121px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .blue-icons__brands img {
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
 }
